--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<script src="./script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <title>Rock Paper Scissors</title>
+</head>
+<body>
+    
+</body>
+</html>
