--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+    <div class="roundResult">
+        <p></p>
+    </div>
 </body>
 </html>
