--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
     <div class="roundResult">
         <p></p>
     </div>
+    <div class="scoreboard">
+        <div class="computerScore">
+            <h2>Computer Score</h2>
+            <p>0</p>
+        </div>
+        <div class="playerScore">
+            <h2>Player Score</h2>
+            <p>0</p>
+        </div>
+    </div>
 </body>
 </html>
