Create a container for the buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <header>
         <h1>Rock Paper Scissors</h1>
     </header>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <div class="buttons-container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+    
     <div class="roundResult">
         <p></p>
     </div>
